--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ openai==0.27.8
 duckduckgo-search==3.8.3
 pypdf==3.12.2
 sentence-transformers==2.2.2
-torch!=2.0.1,>=2.0.0
+# torch!=2.0.1,>=2.0.0
 tabulate==0.9.0
 pandas
 openpyxl
